Update joptsimple sources from https://github.com/jopt-simple/jopt-simple

--- a/src/joptsimple/CMakeLists.txt
+++ b/src/joptsimple/CMakeLists.txt
@@ -8,7 +8,7 @@ set(JOPTSIMPLE_SRC
 	BuiltinHelpFormatter.java
 	HelpFormatter.java
 	IllegalOptionSpecificationException.java
-	MissingRequiredOptionException.java
+	MissingRequiredOptionsException.java
 	MultipleArgumentsForOptionException.java
 	NoArgumentOptionSpec.java
 	OptionArgumentConversionException.java
@@ -29,18 +29,33 @@ set(JOPTSIMPLE_SRC
 	ValueConverter.java
 	internal/AbbreviationMap.java
 	internal/Classes.java
-	internal/Column.java
-	internal/ColumnWidthCalculator.java
-	internal/ColumnarData.java
+	internal/Columns.java
 	internal/ConstructorInvokingValueConverter.java
 	internal/MethodInvokingValueConverter.java
-	internal/Objects.java
 	internal/Reflection.java
 	internal/ReflectionException.java
 	internal/Strings.java
+	internal/Messages.java
+	internal/Row.java
+	internal/Rows.java
 	util/DateConverter.java
 	util/KeyValuePair.java
-	util/RegexMatcher.java)
+	util/RegexMatcher.java
+	NonOptionArgumentSpec.java
+	OptionDeclarer.java
+	UnavailableOptionException.java
+	UnconfiguredOptionException.java
+	internal/Columns.java
+	internal/Messages.java
+	internal/OptionNameMap.java
+	internal/Row.java
+	internal/Rows.java
+	internal/SimpleOptionNameMap.java
+	util/EnumConverter.java
+	util/InetAddressConverter.java
+	util/PathConverter.java
+	util/PathProperties.java
+)
 
 add_jar(joptsimple ${JOPTSIMPLE_SRC})
 
